--- a/style.css
+++ b/style.css
@@ -369,7 +369,11 @@ article .icon {
   width: 90%;
   height: 90%;
 }
-
+.project-imgs{
+  border-radius: 2rem;
+  width: 50%;
+  height: 50%;
+}
 .project-title {
   margin: 1rem;
   color: black;
